fix: overflow hidden

--- a/packages/ketchup/src/components/kup-card/dialog/kup-card-dialog-8.scss
+++ b/packages/ketchup/src/components/kup-card/dialog/kup-card-dialog-8.scss
@@ -153,6 +153,7 @@
   }
 
   .section-3 {
+    overflow-x: hidden;
     border-top: 1px solid var(--kup-border-subtle);
     display: flex;
     flex-direction: row;
